--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
+    "strict": true,
+    "noImplicitAny": true,
     "paths": {
       "@nx-boost/workspace": ["packages/workspace/src/index.ts"]
     }
