--- a/package.json
+++ b/package.json
@@ -40,11 +40,18 @@
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-import": "^2.22.0",
+    "husky": "^4.2.5",
     "jest": "26.2.2",
     "prettier": "2.0.4",
+    "pretty-quick": "^3.0.0",
     "ts-jest": "26.1.4",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
     "typescript": "~3.9.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
