--- a/.eslintrc
+++ b/.eslintrc
@@ -32,26 +32,7 @@
         ]
       }
     ],
-    "import/order": [
-      "error",
-      {
-        "groups": ["builtin", "external", "parent", "sibling", "index"],
-        "newlines-between": "always",
-        "pathGroups": [
-          {
-            "pattern": "@stackit/**",
-            "group": "external",
-            "position": "after"
-          }
-        ],
-        "pathGroupsExcludedImportTypes": ["builtin"],
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": false
-        }
-      }
-    ],
-    "import/no-unresolved": ["error", { "ignore": ["^@stackit/.*$"] }],
+    "import/no-unresolved": ["error"],
     "no-cond-assign": "error",
     "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
     "@typescript-eslint/no-explicit-any": "error"
