--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@angular-devkit/architect": "^0.1001.0",
+    "@nx-boost/workspace": "0.0.1-test9",
+    "rxjs": "^6.6.2"
+  },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "^10.1.0",
     "@nrwl/jest": "^10.1.0",
@@ -43,6 +47,7 @@
     "husky": "^4.2.5",
     "jest": "26.2.2",
     "prettier": "2.0.4",
+    "prettier-eslint": "^11.0.0",
     "pretty-quick": "^3.0.0",
     "ts-jest": "26.1.4",
     "ts-node": "~7.0.0",
