--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,11 @@
     "import/no-unresolved": ["error"],
     "no-cond-assign": "error",
     "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_" }
+    ]
   },
   "overrides": [
     {
